--- a/_config.yml
+++ b/_config.yml
@@ -1,25 +1,25 @@
 # Mandatory settings
 
-name: Chalk
+name: MLForStupidPeople
 paginate: 25
 paginate_path: "/posts/page/:num/"
 url: # add site url http://example.com/
-blog_theme: light # Or use dark
+blog_theme: dark # Or use dark
 
 # Optional settings
 
-discus_identifier: # Add your Disqus identifier
-ga_analytics: # Add your GA Tracking Id
+discus_identifier: 'machinelearningforstupidpeople'
+ga_analytics: 'UA-89644403-1'
 rss_enabled: true # Change to false if not
 about_enabled: false # Change to true if you wish to show an icon in the navigation that redirects to the about page
 social:
   dribbble: # Add your Dribbble handle
-  facebook: # Add your Facebook handle
+  facebook: "abhikmitra" 
   flickr: # Add your Flickr handle
-  github: # Add your GitHub handle
-  linkedin: # Add your LinkedIn handle
-  twitter: # Add your Twitter handle
-  email: # Add your Email address
+  github:  "abhikmitra"
+  linkedin: "iamabhik"
+  twitter: "complancoder"
+  email: "abhikprince@gmail.com"
   bitcoin: # Add your Bitcoin link or address
 
 # Important settings (change at own risk)
