--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 name: MLForStupidPeople
 paginate: 25
 paginate_path: "/posts/page/:num/"
-url: # add site url http://example.com/
+url: 'https://abhikmitra.github.io/machineLearningForStupidPeople/'
 blog_theme: dark # Or use dark
 
 # Optional settings
